bytecode inliner